--- a/ACM2.Rmd
+++ b/ACM2.Rmd
@@ -25,12 +25,16 @@ load("data/jeunesse/ACMH.RData")
 sparkline(0)
 
 ACMH <- function(data,lignes) {
-  data %>% 
-  filter(année==2021) %>%
+  tab <- data %>% 
+            rename(Code=1) %>%  
+            filter(Code %in% lignes) %>%
+            arrange(Code)
+
+tab %>%
+  filter(année==2021 ) %>%
   select(-année) %>%
-  slice(lignes) %>%
-  left_join(data %>% 
-              group_by(`Destination`) %>%
+  left_join(tab %>% 
+              group_by(Code) %>%
               summarise(`séjours 2010-2021`=spk_chr(`Nombre de séjours`),
                         `séjours >5j 2010-2021`=spk_chr(`dont séjours de cinq jours ou plus`),
                         `mineurs 2010-2021`=spk_chr(`Effectifs de départs de mineurs`),
@@ -40,8 +44,8 @@ ACMH <- function(data,lignes) {
                         `handicap 2016-2021`=spk_chr(`Mineurs déclarés en situation de handicap`[année>2015]),
                         `journées 2010-2021`=spk_chr(`Nombre de journées`),
                         `journées enfants 2010-2021`=spk_chr(`Nombre de journées enfants`)
-                        ),
-            by="Destination") %>%
+                        ) ,
+            by="Code") %>%
   cc_kable(aligne = "clrrrrrrrrr") %>%
   add_header_above(c( " "=11,"évolutions"=9) ) %>%
   footnote(general = "MENJS, DJEPVA, fichier SIAM ; traitement INJEP, MEDES", general_title = "Source : ",
@@ -81,7 +85,8 @@ Les Accueils collectifs de mineurs avec hébergement regroupent les centres de v
 
 ```{r}
 
-ACMH(data = ACMHreg_ensemble, lignes = c(5:17,4,1) )
+ACMH(data = ACMHreg_ensemble, 
+     lignes = c(11:94,"Total France métropolitaine","Total France + Étranger") )
 
 ```
 
@@ -89,7 +94,8 @@ ACMH(data = ACMHreg_ensemble, lignes = c(5:17,4,1) )
 séjours non spécifiques d'au moins cinq jours
 ```{r}
 
-ACMH(data = ACMHreg_vacances,lignes = c(5:17,4,1))
+ACMH(data = ACMHreg_vacances,
+     lignes = c(11:94,"Total France métropolitaine","Total France + Étranger") )
 
 ```
 
@@ -97,7 +103,8 @@ ACMH(data = ACMHreg_vacances,lignes = c(5:17,4,1))
 séjours non spécifiques de moins de cinq jours
 ```{r}
 
-ACMH(data = ACMHreg_courts,lignes = c(5:17,4,1))
+ACMH(data = ACMHreg_courts,
+     lignes = c(11:94,"Total France métropolitaine","Total France + Étranger") )
 
 ```
 
@@ -105,7 +112,8 @@ ACMH(data = ACMHreg_courts,lignes = c(5:17,4,1))
 sportifs, linguistiques, artistiques ou culturels, rencontres européennes de jeunes, chantiers de bénévoles
 ```{r}
 
-ACMH(data = ACMHreg_specifiques,lignes = c(5:17,4,1))
+ACMH(data = ACMHreg_specifiques,
+     lignes = c(11:94,"Total France métropolitaine","Total France + Étranger") )
 
 ```
 
@@ -113,7 +121,8 @@ ACMH(data = ACMHreg_specifiques,lignes = c(5:17,4,1))
 aux accueils de loisirs ou aux accueils de jeunes (mini-séjours)
 ```{r}
 
-ACMH(data = ACMHreg_accessoires,lignes = c(5:17,4,1))
+ACMH(data = ACMHreg_accessoires,
+     lignes = c(11:94,"Total France métropolitaine","Total France + Étranger") )
 
 ```
 
@@ -128,7 +137,8 @@ ACMH(data = ACMHreg_accessoires,lignes = c(5:17,4,1))
 
 ```{r}
 
-ACMH(data = ACMHdep_ensemble,lignes = as.numeric(depbfc)+5 )
+ACMH(data = ACMHdep_ensemble,
+     lignes = depbfc )
 
 ```
 
@@ -136,7 +146,8 @@ ACMH(data = ACMHdep_ensemble,lignes = as.numeric(depbfc)+5 )
 séjours non spécifiques d'au moins cinq jours
 ```{r}
 
-ACMH(data = ACMHdep_vacances,lignes = as.numeric(depbfc)+5)
+ACMH(data = ACMHdep_vacances,
+     lignes = depbfc )
 
 ```
 
@@ -144,7 +155,8 @@ ACMH(data = ACMHdep_vacances,lignes = as.numeric(depbfc)+5)
 séjours non spécifiques de moins de cinq jours
 ```{r}
 
-ACMH(data = ACMHdep_courts,lignes = as.numeric(depbfc)+5)
+ACMH(data = ACMHdep_courts,
+     lignes = depbfc )
 
 ```
 
@@ -152,7 +164,8 @@ ACMH(data = ACMHdep_courts,lignes = as.numeric(depbfc)+5)
 sportifs, linguistiques, artistiques ou culturels, rencontres européennes de jeunes, chantiers de bénévoles
 ```{r}
 
-ACMH(data = ACMHdep_specifiques,lignes = as.numeric(depbfc)+5)
+ACMH(data = ACMHdep_specifiques,
+     lignes = depbfc )
 
 ```
 
@@ -160,6 +173,7 @@ ACMH(data = ACMHdep_specifiques,lignes = as.numeric(depbfc)+5)
 aux accueils de loisirs ou aux accueils de jeunes (mini-séjours)
 ```{r}
 
-ACMH(data = ACMHdep_accessoires,lignes = as.numeric(depbfc)+5)
+ACMH(data = ACMHdep_accessoires,
+     lignes = depbfc )
 
 ```
